<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/backgroundDark"
        tools:context=".DetailActivity">

        <ImageView
            android:id="@+id/iv_poster"
            android:layout_width="416dp"
            android:layout_height="405dp"
            android:contentDescription="@string/movie_poster"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_movie_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/movie_title"
            android:textColor="@android:color/white"
            android:textSize="@dimen/sz_movie_title"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iv_poster" />

        <TextView
            android:id="@+id/tv_release_date"
            style="@style/my_text_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_placeholder_release_date"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_movie_title" />

        <TextView
            android:id="@+id/tv_vote_average"
            style="@style/my_text_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/placeholder_vote_average"
            android:textSize="40sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_release_date" />

        <ImageView
            android:id="@+id/iv_favorite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:contentDescription="@string/movie"
            android:src="@drawable/ic_favorite_border_red_24dp"
            app:layout_constraintBottom_toTopOf="@+id/tv_plot_synopsis"
            app:layout_constraintEnd_toStartOf="@+id/tv_vote_average"
            app:layout_constraintTop_toBottomOf="@+id/tv_release_date"
            app:layout_constraintVertical_bias="0.761" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:contentDescription="@string/star"
            android:src="@drawable/star"
            app:layout_constraintBottom_toTopOf="@+id/tv_plot_synopsis"
            app:layout_constraintStart_toEndOf="@+id/tv_vote_average"
            app:layout_constraintTop_toBottomOf="@+id/tv_release_date"
            app:layout_constraintVertical_bias="0.761" />


        <TextView
            android:id="@+id/tv_plot_synopsis"
            style="@style/my_text_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="2dp"
            android:scrollbars="vertical"
            android:text="@string/placeholder_synopsis"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_vote_average" />

        <View
            android:id="@+id/details_divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?android:attr/listDivider"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_plot_synopsis" />

        <TextView
            android:id="@+id/tv_error_parseling"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/error_reading_movie_data"
            android:textColor="@color/warning_text"
            android:textSize="@dimen/sz_movie_title"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_trailers"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            app:cardBackgroundColor="#FFFFFF"
            app:cardCornerRadius="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/details_divider">

            <include layout="@layout/layout_trailer_list" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_reviews"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            app:cardBackgroundColor="#FFFFFF"
            app:cardCornerRadius="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cv_trailers">

            <include layout="@layout/layout_review_list" />
        </androidx.cardview.widget.CardView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>